kubernetes/apps/network/external-service/vaultwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: internal-vaultwarden
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 30032
      name: http
