kubernetes/apps/network/external-service/vaultwarden/ingress.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-vaultwarden
subsets:
  - addresses:
      - ip: ${TRUENAS_IP}
    ports:
      - port: 30032
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: external-vaultwarden
spec:
  ports:
    - port: 80
      targetPort: 30032
      name: http
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress-vaultwarden
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: external
  rules:
    - host: vaultwarden.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-vaultwarden
                port:
                  number: 80
